# mastermind

./: .gitignore  Dockerfile  Makefile  README.md  azure-pipelines.yml  docker-compose.dev.yml  docker-compose.preprod.yml  docker-compose.yml  pyproject.toml
conf/: nginx.conf  web.conf
mastermind/: .coveragerc  .pylintrc  manage.py  pytest.ini
mastermind/api/: urls.py
mastermind/api/code_peg/: serializers.py  tests.py  urls.py  views.py
mastermind/api/game/: serializers.py  tests.py  urls.py  views.py
mastermind/api/user/: serializers.py  tests.py  urls.py  views.py
mastermind/code_peg/: apps.py  models.py  tests.py
mastermind/code_peg/migrations/: 0001_initial.py  0002_auto_20200126_1120.py  0003_auto_20200126_1441.py
mastermind/game/: apps.py  checker.py  models.py  tests.py
mastermind/game/migrations/: 0001_initial.py
mastermind/mastermind/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: start.sh
