[tool.poetry]
name = "mastermind"
version = "0.1.0"
description = "Implementation of mastermind game through a REST API"
authors = ["Adrian Carayol Orenes <adriancarayol@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.0.2"
djangorestframework = "3.11.0"
drf-yasg = "1.17.0"
psycopg2-binary = "^2.8.4"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
